link/button spacing fixes

--- a/web/components/landingPage/index.module.scss
+++ b/web/components/landingPage/index.module.scss
@@ -304,6 +304,7 @@ div.highlight{
   height: 0px;
   left: -1px;
   top: -1px;
+  margin: 0px;
   background: linear-gradient(theme.$highlight,theme.$highlight);
   background-position: right;
   background-size: 0% 100%;
